# meta_pytorch_hackathon_Repo

./: .gitignore  Dockerfile  README.md  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
ai_email_inbox_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
project/: pyvenv.cfg
server/: app.py
tasks/: easy.py  hard.py  medium.py
tasks/easy/: metadata.yaml
tasks/hard/: metadata.yaml
tasks/medium/: metadata.yaml
